Mobile version is completed. Have started js

--- a/index.html
+++ b/index.html
@@ -124,60 +124,90 @@
                 <img src="img/services/services__house-renov.jpg" alt="Ремонт частного дома">
               </div>
               <div class="service-card__content">
-                <h3 class="service-card__title elem-title">
-                  Ремонт частного дома
-                </h3>
-                <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
-                <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
-              </div>
+                <div class="service-card__content-top">
+                  <h3 class="service-card__title elem-title">
+                    Ремонт частного дома
+                  </h3>
+                  <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
+                  <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
+                </div>
+                <div class="service-card__content-bottom">
+                  <div class="service-card__close-btn">
+                  </div>
+                </div>
+                </div> 
             </article>
             <article class="service-card">
               <div class="service-card__img">
                 <img src="img/services/services__bathroom-renov.jpg" alt="Ремонт ванной комнаты">
               </div>
               <div class="service-card__content">
-                <h3 class="service-card__title elem-title">
-                  Ремонт ванной комнаты
-                </h3>
-                <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
-                <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
-              </div>
+                <div class="service-card__content-top">
+                  <h3 class="service-card__title elem-title">
+                    Ремонт ванной комнаты
+                  </h3>
+                  <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
+                  <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
+                </div>
+                <div class="service-card__content-bottom">
+                  <div class="service-card__close-btn">
+                  </div>
+                </div>
+                </div> 
             </article>
             <article class="service-card">
               <div class="service-card__img">
-                <img src="img/services/services__furniture-install.jpg" alt="Сборка и установка мебели">
+                <img src="img/services/services__furniture-install.jpg" alt="Ремонт ванной комнаты">
               </div>
               <div class="service-card__content">
-                <h3 class="service-card__title elem-title">
-                  Сборка и установка мебели
-                </h3>
-                <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
-                <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
-              </div>
+                <div class="service-card__content-top">
+                  <h3 class="service-card__title elem-title">
+                    Сборка и установка мебели
+                  </h3>
+                  <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
+                  <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
+                </div>
+                <div class="service-card__content-bottom">
+                  <div class="service-card__close-btn">
+                  </div>
+                </div>
+                </div> 
             </article>
             <article class="service-card">
               <div class="service-card__img">
                 <img src="img/services/services__kitchen-renov.jpg" alt="Ремонт кухни">
               </div>
               <div class="service-card__content">
-                <h3 class="service-card__title elem-title">
-                  Ремонт кухни
-                </h3>
-                <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
-                <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
-              </div>
+                <div class="service-card__content-top">
+                  <h3 class="service-card__title elem-title">
+                    Ремонт кухни
+                  </h3>
+                  <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
+                  <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
+                </div>
+                <div class="service-card__content-bottom">
+                  <div class="service-card__close-btn">
+                  </div>
+                </div>
+                </div> 
             </article>
             <article class="service-card">
               <div class="service-card__img">
                 <img src="img/services/services__apartment-renov.jpg" alt="Ремонт новостройки">
               </div>
               <div class="service-card__content">
-                <h3 class="service-card__title elem-title">
-                  Ремонт новостройки
-                </h3>
-                <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
-                <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
-              </div>
+                <div class="service-card__content-top">
+                  <h3 class="service-card__title elem-title">
+                    Ремонт новостройки
+                  </h3>
+                  <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
+                  <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
+                </div>
+                <div class="service-card__content-bottom">
+                  <div class="service-card__close-btn">
+                  </div>
+                </div>
+                </div> 
             </article>
           </div>
           <button class="services__btn btn">ВСЕ УСЛУГИ</button>
@@ -444,5 +474,8 @@
       </div>
     </footer>
   </div>
+
+  <script src="main.js"></script>
+
 </body>
 </html>
